add icon import css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-
+  <link rel="icon" href="./images/logo-drk.png">
+  <link type="text/css" rel="styleSheet" href="./css/html5reset.css">
+  <link type="text/css" rel="styleSheet" href="./css/starter.css">
+  <link type="text/css" rel="styleSheet" href="./css/style.css">
   <!-- ADD requirements for favicon, stylesheets, and any other meta-data. -->
   <title>New Company Inc.</title>
 </head>
