--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" href="./images/logo-drk.png">
   <link type="text/css" rel="styleSheet" href="./css/html5reset.css">
   <link type="text/css" rel="styleSheet" href="./css/starter.css">
@@ -18,10 +19,10 @@
     <nav>
       <!-- Add links -->
       <ul class="nav_links">
-        <li><a>About</a></li>
-        <li><a href=>Method</a></li>
-        <li><a>Clients</a></li>
-        <li><a>Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#method">Method</a></li>
+        <li><a href="#clients">Clients</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
