--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- Add Skip To Content -->
-  <!-- <a href="#main" class="skip">Skip to Content</a> -->
+  <a href="#main" class="skip">Skip to Content</a>
   <header>
     <img src="images/logo-drk.png" alt="logo" id="logo">
     <nav>
